# internal/app/router.go
@@ -13,4 +13,6 @@ func RegisterRoutes(app *fiber.App, c *Container) {
 	c.Host.RegisterRoutes(api)
 	c.Queue.RegisterRoutes(api, c.RateLimiters)
 	c.Customer.RegisterRoutes(api, c.RateLimiters)
+	c.Billing.RegisterRoutes(api)
+	c.System.RegisterRoutes(api)
 }
